# StratosAPI-Demo

./: .gitignore  README.md  pyproject.toml
configs/demo_setups/: demo_EFGA_11_short_press.yaml  demo_EFGA_aggressive.yaml  demo_EFGA_baseline.yaml  short_demo_EFGA_aggressive.yaml  short_demo_EFGA_baseline.yaml
configs/maps/: EFGA_11.map  EFG_9.map
demo_app/: __init__.py  events.py  labels.py  live.py  replay.py  server.py
demo_app/static/: app.js  index.html  styles.css
demo_data/: README.md
demo_data/demo_live_demo_EFGA_11_short_press_0906_102358/: events.jsonl  game.jsonl  metadata.json
demo_data/demo_live_demo_EFGA_11_short_press_0906_112314/: events.jsonl  game.jsonl  metadata.json
demo_data/demo_live_demo_EFGA_11_short_press_0906_112845/: events.jsonl  game.jsonl  metadata.json
demo_data/demo_live_demo_EFGA_11_short_press_0906_123909/: events.jsonl  game.jsonl  metadata.json
demo_data/demo_live_demo_EFGA_aggressive_1506_140129/: events.jsonl  game.jsonl  metadata.json
diplomacy_llm/: board_images.py  config.py  demo_paths.py  game_runner.py  llm_client.py  llm_player.py  metrics_collector.py  phase_snapshot.py  prompt_templates.py  prompts.py  response_schemas.py  saved_games.py
diplomacy_llm/messaging/: __init__.py  models.py  (+2 more)
docs/: architecture.md  game-rules.md  research-context.md
tests/: test_board_images.py  test_config.py  test_demo_app.py  test_demo_live.py  test_demo_paths.py  test_game_runner.py  test_llm_player.py  test_messaging.py  test_prompt_templates.py  test_saved_games.py  test_strategies.py  test_strategy_resolver.py
(+16 files in other folders)
